<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity">

    <Toolbar
        android:id="@+id/toolbar_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_black_24dp" />

        <Button
            android:id="@+id/rantBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons"
            android:text="@string/rant"
            android:textColor="#fff"
            android:textSize="18sp"
            android:layout_gravity="end"
            android:layout_marginEnd="5dp"/>

    </Toolbar>

    <EditText
        android:id="@+id/rantTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_post"
        android:hint="@string/title_of_your_rant"/>

    <EditText
        android:id="@+id/post"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text|textMultiLine"
        android:hint="@string/rant_it"
        android:layout_below="@id/rantTitle"
        android:gravity="top"/>

</RelativeLayout>