<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9E9E9E"
    tools:context=".SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_theme"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_settings">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:src="@mipmap/ic_person"
                android:id="@+id/profImgSetting"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/settings_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profImgSetting"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/setting_status"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:hint="@string/status"
                android:textColor="@color/white"
                android:textSize="16sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/settings_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_status"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/setting_username"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:hint="@string/username"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/settings_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_username"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/setting_full_name"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:hint="@string/full_name"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/settings_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_full_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/setting_country"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:hint="@string/country"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/settings_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_country"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/setting_dob"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:hint="@string/date_of_birth"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/settings_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_dob"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/setting_gender"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:hint="@string/gender"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/save_settings_btn"
                android:textSize="18sp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/buttons"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/settings_gender"
                android:layout_marginTop="20dp"
                android:text="@string/done"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>