<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/userRelated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/profImg"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/postFullName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/developer"
                        android:textSize="20sp"
                        android:layout_margin="4dp"/>

                    <TextView
                        android:id="@+id/postDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2-December-2019"
                        android:textSize="16sp"
                        android:layout_marginStart="4dp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/userRelated">

           <!--     <TextView
                    android:id="@+id/postTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slogan"
                    android:layout_margin="7dp"
                    android:textStyle="bold"
                    android:textSize="18sp"/> -->

                <TextView
                    android:id="@+id/postDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slogan"
                    android:layout_margin="7dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                        android:id="@+id/ikr"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/arrow_up"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"
                    android:layout_marginTop="10dp"
                    android:id="@+id/no_of_ikr"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/disagree"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/down_arrow" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"
                    android:id="@+id/no_0f_disagrees"/>
            </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                <ImageView
                    android:id="@+id/comment"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_comment_black_24dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"
                    android:id="@+id/no_0f_comments"/>
            </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>